--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,13 @@
-pool: MyAgentPool
+
+trigger:
+- main
+
+pool:
+  vmImage: ubuntu-latest
+
+variables:
+  buildConfiguration: 'Release'
+  
 steps:
-- bash: echo hello world
+- bash: dotnet build --configuration $(buildConfiguration)
+  displayName:'dotnet build $(buildConfiguration)'
