--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,5 +9,5 @@ variables:
   buildConfiguration: 'Release'
   
 steps:
-- bash: dotnet build --configuration $(buildConfiguration)
+- script: dotnet build --configuration $(buildConfiguration)
   displayName:'dotnet build $(buildConfiguration)'
